--- a/app/src/main/res/layout/activity_aut_req2.xml
+++ b/app/src/main/res/layout/activity_aut_req2.xml
@@ -64,6 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SEÇ"
+        android:textColor="@color/white"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
