--- a/app/src/main/res/layout/activity_aut_per_up.xml
+++ b/app/src/main/res/layout/activity_aut_per_up.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/per_reg"
-    tools:context=".Authorized_PersonelRegister">
-
+    android:orientation="vertical"
+    android:id="@+id/drawer_layout_per_update"
+    tools:context=".Authorized_Personel_Update">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
         <include
-            layout="@layout/activity_tool_bar">
+            layout="@layout/activity_tool_bar_per_update">
         </include>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Personel Kaydı"
-            android:textColor="#050505"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+
 
     </LinearLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/LayoutupdatePer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
+        android:layout_height="match_parent"
+        android:layout_marginTop="2dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/history_geri_button"
+        tools:ignore="MissingConstraints">
+
         <ImageButton
             android:id="@+id/imageButton2"
             android:layout_width="264dp"
@@ -37,7 +36,7 @@
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.154"
+            app:layout_constraintVertical_bias="0.032"
             app:srcCompat="@mipmap/ic_banner_foreground" />
 
         <EditText
@@ -45,14 +44,14 @@
             android:layout_width="358dp"
             android:layout_height="42dp"
             android:ems="10"
-            android:inputType="textPersonName"
             android:hint="Personel Kurumunu Giriniz..."
+            android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.673" />
+            app:layout_constraintVertical_bias="0.65" />
 
         <TextView
             android:id="@+id/textView8"
@@ -66,18 +65,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.732" />
+            app:layout_constraintVertical_bias="0.716" />
 
         <EditText
             android:id="@+id/per_rol"
             android:layout_width="358dp"
             android:layout_height="42dp"
             android:ems="10"
+            android:hint="Personelin Kurumdaki Rolünü Giriniz..."
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.49"
-            android:hint="Personelin Kurumdaki Rolünü Giriniz..."
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.801" />
@@ -95,21 +94,21 @@
             app:layout_constraintHorizontal_bias="0.472"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.608" />
+            app:layout_constraintVertical_bias="0.575" />
 
         <EditText
             android:id="@+id/per_name"
             android:layout_width="358dp"
             android:layout_height="42dp"
             android:ems="10"
+            android:hint="Personel Adı Soyadını Giriniz..."
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Personel Adı Soyadını Giriniz..."
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.548" />
+            app:layout_constraintVertical_bias="0.499" />
 
         <TextView
             android:id="@+id/textView6"
@@ -123,7 +122,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.483" />
+            app:layout_constraintVertical_bias="0.432" />
 
         <TextView
             android:id="@+id/textView5"
@@ -138,29 +137,29 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.356" />
+            app:layout_constraintVertical_bias="0.283" />
 
         <EditText
             android:id="@+id/per_email"
             android:layout_width="358dp"
             android:layout_height="42dp"
             android:ems="10"
+            android:hint="Personel Emalini Giriniz..."
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Personel Emalini Giriniz..."
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.413" />
+            app:layout_constraintVertical_bias="0.354" />
 
         <Button
             android:id="@+id/kayit_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kaydı Gerçekleştir"
-            android:textColor="#FFFFFF"
-            app:backgroundTint="@color/black"
+            android:text="Güncelle"
+            android:textColor="@color/black"
+            app:backgroundTint="#9CCC65"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.474"
@@ -169,14 +168,4 @@
             app:layout_constraintVertical_bias="0.9" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/white">
-
-        <include
-            layout="@layout/activity_authorized_nav_drawer"/>
-    </RelativeLayout>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</LinearLayout>
