--- a/app/src/main/res/layout/activity_aut_req3.xml
+++ b/app/src/main/res/layout/activity_aut_req3.xml
@@ -81,6 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="İsteği kabul et"
+        android:textColor="#FFFFFF"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
