--- a/app/src/main/res/layout/activity_authorized_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_authorized_nav_drawer.xml
@@ -85,6 +85,31 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:onClick="ClickAuthorizedPersoneller">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Personeller"
+            android:padding="12dp"
+            android:layout_marginStart="16dp"
+            tools:ignore="Suspicious0dp"
+            android:layout_marginLeft="16dp">
+
+        </TextView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_person_24"
+            android:layout_marginEnd="48dp"
+            android:layout_marginRight="48dp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:onClick="ClickAuthorizedPersonelRegistration">
         <TextView
             android:layout_width="0dp"
@@ -110,6 +135,56 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:onClick="ClickAuthorizedTeam">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Takımlar"
+            android:padding="12dp"
+            android:layout_marginStart="16dp"
+            tools:ignore="Suspicious0dp"
+            android:layout_marginLeft="16dp">
+
+        </TextView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            android:src="@drawable/ic_baseline_people_24"
+            android:layout_marginRight="48dp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:onClick="ClickAuthorizedEkipman">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Ekipmanlar"
+            android:padding="12dp"
+            android:layout_marginStart="16dp"
+            tools:ignore="Suspicious0dp"
+            android:layout_marginLeft="16dp">
+
+        </TextView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            android:src="@drawable/ic_baseline_panorama_photosphere_select_24"
+            android:layout_marginRight="48dp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:onClick="ClickAuthorizedNotice">
         <TextView
             android:layout_width="0dp"
@@ -122,12 +197,13 @@
             android:layout_marginLeft="16dp">
 
         </TextView>
+
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_notifications"
-            android:layout_marginRight="48dp" />
+            android:layout_marginRight="48dp"
+            android:src="@drawable/ic_notifications" />
 
     </LinearLayout>
     <LinearLayout
@@ -169,7 +245,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Mesaj Kutusu"
+            android:text="Bildirim Oluştur"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
@@ -180,7 +256,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_message"
+            android:src="@drawable/ic_baseline_notification_add_24"
             android:layout_marginRight="48dp" />
 
     </LinearLayout>
