--- a/app/src/main/res/layout/activity_disaster__subpart.xml
+++ b/app/src/main/res/layout/activity_disaster__subpart.xml
@@ -1,348 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/dis_sub"
     tools:context=".Disaster_Subpart">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-
-
-
-        <Space
-            android:layout_width="50dp"
-            android:layout_height="8dp"
-            android:layout_weight="1" >
-        </Space>
-        <Button
-            android:id="@+id/subpart_güncelle"
-            android:layout_width="210dp"
-            android:layout_height="60dp"
-            android:onClick="clickSubpartguncelle"
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:text="Afet Alt Parçasını Güncelle"
-            android:textColor="@color/black"
-            android:textSize="11sp"
-            app:backgroundTint="#9CCC65">
-
-        </Button>
-
-        <Space
-            android:layout_width="50dp"
-            android:layout_height="8dp"
-            android:layout_weight="1" >
-        </Space>
-
-        <Button
-            android:id="@+id/Assign_Team_Subpart"
-            android:layout_width="170dp"
-            android:layout_height="60dp"
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:text="Takım Ataması Yap"
-            android:textColor="@color/white"
-            android:textSize="11sp"
-            app:backgroundTint="@color/purple_500">
-
-        </Button>
-        <Space
-            android:layout_width="50dp"
-            android:layout_height="8dp"
-            android:layout_weight="1" >
-        </Space>
-        <Button
-            android:id="@+id/subpart_sil_button"
-            android:layout_width="110dp"
-            android:layout_height="60dp"
-            android:layout_gravity="left"
-            android:layout_weight="1"
-            android:onClick="clickSubpartsil"
-            android:text="Sil"
-            android:textColor="@color/white"
-            android:textSize="11sp"
-            app:backgroundTint="@color/design_default_color_error">
-
-        </Button>
-
-        <Space
-            android:layout_width="50dp"
-            android:layout_height="8dp"
-            android:layout_weight="1" >
-        </Space>
-    </LinearLayout>
-    <LinearLayout
-        android:background="@drawable/notification_layout_background"
-        android:id="@+id/LayoutNotification"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_weight="0"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        tools:ignore="MissingConstraints">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/subpart_detail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/no_image">
-
-            <EditText
-                android:id="@+id/subpartlevel"
-                android:layout_width="75dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.911"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.938" />
-
-            <TextView
-                android:id="@+id/textView23"
-                android:layout_width="75dp"
-                android:layout_height="25dp"
-                android:gravity="left"
-                android:text="Level:"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.911"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.767" />
-
-            <EditText
-                android:id="@+id/subpartresper"
-                android:layout_width="75dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.184"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.629" />
-
-            <EditText
-                android:id="@+id/subpartmisper"
-                android:layout_width="75dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.546"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.629" />
-
-            <EditText
-                android:id="@+id/subpartstatus"
-                android:layout_width="75dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.983"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.629" />
-
-            <EditText
-                android:id="@+id/subpartisvolstate"
-                android:layout_width="75dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.22"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.934" />
-
-            <EditText
-                android:id="@+id/subpartaddres"
-                android:layout_width="200dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.972"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.328" />
-
-            <EditText
-                android:id="@+id/subpartname"
-                android:layout_width="200dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.972"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.169" />
-
-            <TextView
-                android:id="@+id/textView21"
-                android:layout_width="250dp"
-                android:layout_height="31dp"
-                android:text="Gönüllü İstek Talep Edebilme Durumu:"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.052"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.784" />
-
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="100dp"
-                android:layout_height="25dp"
-                android:text="Afet  İsmi:"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.057"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.058" />
-
-            <TextView
-                android:id="@+id/textView17"
-                android:layout_width="150dp"
-                android:layout_height="25dp"
-                android:text="Afet Altparça İsmi:"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.069"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.218" />
-
-            <TextView
-                android:id="@+id/textView19"
-                android:layout_width="140dp"
-                android:layout_height="25dp"
-                android:gravity="center"
-                android:text="Kayıp İnsan Sayısı:"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.665"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.501" />
-
-            <TextView
-                android:id="@+id/textView22"
-                android:layout_width="75dp"
-                android:layout_height="25dp"
-                android:gravity="left"
-                android:text="Durum:"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.983"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.501" />
-
-            <TextView
-                android:id="@+id/textView20"
-                android:layout_width="150dp"
-                android:layout_height="25dp"
-                android:text="Kurtarılan İnsan Sayısı:"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.501" />
-
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="100dp"
-                android:layout_height="25dp"
-                android:text="Adres"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.057"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.367" />
-
-            <EditText
-                android:id="@+id/subpartdisname"
-                android:layout_width="200dp"
-                android:layout_height="41dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.972"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="8dp"
-        android:layout_weight="0" >
-    </Space>
-    <LinearLayout
-
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
-
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/subpart_map"
-            android:layout_weight="1"
-            android:name="com.google.android.gms.maps.SupportMapFragment" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="KONUM"
-            android:textSize="10sp"
-            android:gravity="center"
-            android:layout_weight="0">
-        </TextView>
-
+        android:layout_height="wrap_content">
+        <include
+            layout="@layout/activity_aut_subpart">
+        </include>
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
 
+        <include
+            layout="@layout/activity_authorized_nav_drawer"/>
+    </RelativeLayout>
 
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
