--- a/app/src/main/res/layout/activity_navdrawer_updatedisaster.xml
+++ b/app/src/main/res/layout/activity_navdrawer_updatedisaster.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Authorized_ActiveDisasters"
-    android:id="@+id/activedisaster">
+    android:id="@+id/activedisasterupdate">
 
 
 
@@ -19,30 +19,30 @@
             tools:layout_editor_absoluteX="-113dp"
             tools:layout_editor_absoluteY="0dp"></include>
 
-    <ScrollView
+        <ScrollView
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="0dp"
-        android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/history_geri_button"
-        tools:ignore="MissingConstraints">
-
-        <LinearLayout
-            android:id="@+id/auth_lay_DisasterScroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/history_geri_button"
+            tools:ignore="MissingConstraints">
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/auth_lay_DisasterScroll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+            </LinearLayout>
 
 
-    </ScrollView>
+        </ScrollView>
 
-</LinearLayout>
+    </LinearLayout>
 
 
 
