--- a/app/src/main/res/layout/activity_authorized__volunteer_request.xml
+++ b/app/src/main/res/layout/activity_authorized__volunteer_request.xml
@@ -1,34 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layoutautreg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layoutautreg"
+    android:orientation="vertical"
     tools:context=".Authorized_VolunteerRequest">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include
-            layout="@layout/activity_tool_bar">
-        </include>
+        android:layout_height="wrap_content">
 
-        <include layout="@layout/activity_aut_req1"></include>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
-
+        <include layout="@layout/activity_aut_vol_req"></include>
     </LinearLayout>
+
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/white">
-        <include
-            layout="@layout/activity_authorized_nav_drawer"/>
+
+        <include layout="@layout/activity_authorized_nav_drawer" />
     </RelativeLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
