--- a/app/src/main/res/layout/activity_personel__progress__history.xml
+++ b/app/src/main/res/layout/activity_personel__progress__history.xml
@@ -8,6 +8,7 @@
     android:layout_weight="1"
     >
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -21,10 +22,13 @@
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+         android:textColor="#FFF"
+         android:background="#000"
         tools:ignore="MissingConstraints">
         </Button>
     </LinearLayout>
         <TextView
+
             android:id="@+id/History_change_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,11 +43,12 @@
         android:layout_width="match_parent"
         android:layout_height="600dp"
         android:layout_weight="1"
-        android:background="@android:color/darker_gray"
+        android:background="#BFBFBF"
         tools:ignore="MissingConstraints"
        >
 
         <LinearLayout
+            android:background="#BFBFBF"
             android:id="@+id/layoutScroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,6 +64,7 @@
 
 
     <LinearLayout
+        android:background="#BFBFBF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -69,7 +75,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Afet/Takım Durum Geçmişi"
-        app:backgroundTint="#352D20"
+        android:textColor="#FFF"
+        android:background="#6464"
         android:layout_weight="1"
 
         tools:ignore="MissingConstraints" />
